# consolidatewheels

./: .pre-commit-config.yaml  LICENSE  README.rst  consolidatewheels.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
consolidatewheels/: __main__.py  consolidate.py  consolidate_linux.py  consolidate_osx.py  consolidate_win.py  consolidatewheels.py  dedupe.py  main.py  wheels.py  wheelsfunc.py
tests/: test_consolidate.py  test_consolidate_linux.py  test_consolidate_osx.py  test_consolidate_win.py  test_dedupe.py  test_main.py  test_wheels.py
tests/files/: libfirst-0.0.0-cp310-cp310-manylinux1_x86_64.manylinux_2_5_x86_64.whl  libtwo-0.0.0-cp310-cp310-manylinux1_x86_64.manylinux_2_5_x86_64.whl
