[build-system]
requires = ["setuptools>=45"]

[project]
name = "consolidatewheels"
version = "0.3"
authors = [
    {name = "Alessandro Molina", email = "amol@turbogears.org"},
]
license = {text = "MIT"}
description = "Consolidates the shared object dependencies across multiple wheels"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "wheel",
    "pkginfo",
    "pefile"
]

[project.optional-dependencies]
testing = [
    "pytest >= 3.4",
    "pytest-cov"
]

[project.scripts]
consolidatewheels = "consolidatewheels.main:main"

[tool.setuptools]
packages = ["consolidatewheels"]

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov=consolidatewheels --cov-report term-missing"
testpaths = ["tests"]
